--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Bruno Khélifi</title>
+        <title>B. Khélifi</title>
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -34,7 +34,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Bruno Khélifi</span>
+                <span class="d-block d-lg-none">Bruno Khélifi - APC, Paris</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="BK.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -62,7 +62,8 @@
                     <br>
                     <div class="subheading mb-5">
                         Gamma-ray astrophysicist at the <a href="https://apc.u-paris.fr/APC_CS/en" target="_blank">Astroparticles
-                        & Cosmology</a> laboratory (Paris, France), CNRS/IN2P3 - Université Paris Cité
+                        & Cosmology</a> laboratory (Paris, France)<br>
+                        CNRS/IN2P3 - Université Paris Cité
                     </div>
                     <p class="lead mb-5">My research focuses on the observational study of the acceleration processes
                         of charged particles into galactic astrophysical objects, such that pulsar wind nebulae or pevatrons.
