Fixing education and positions
Signed-off-by: Bruno Khélifi <khelifi@in2p3.fr>

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0"><a href="https://www.mpi-hd.mpg.de/mpi/en/">MPIK</a>, Heidelberg (Germany)</h3>
-                            <div class="subheading mb-3">Post-doctorat</div>
+                            <div class="subheading mb-3">Post-doctorate</div>
                             <div>Gamma-ray astronomy with H.E.S.S.</div>
                             <p>Supervised by W. Hofmann</a></p>
                         </div>
@@ -228,7 +228,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0"><a href="https://u-paris.fr/">Université Paris Cité</a> (France)</h3>
                             <div class="subheading mb-3">Accreditation to supervise research</div>
-                            <div>Computer Science - Web Development Track</div>
+                            <div><q>The TeV astrophysics towards Open Science</q></div>
+                            <p>To be soon published</p>
 <!--                            <p>GPA: 3.23</p>-->
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">April 2024</span></div>
@@ -237,8 +238,11 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0"><a href="https://www.unicaen.fr/">Université de Caen - Basse Normandie</a> (France)</h3>
                             <div class="subheading mb-3">PhD</div>
-                            <div>Subatomic particles - Gamma-ray astronomy</div>
-                            <p><a href="https://theses.fr/2002CAEN2051">(link to manuscript)</a></p>
+                            <div>Speciality: Subatomic particles - Gamma-ray astronomy</div>
+                            <p><br><q>Gamma sources search with a Maximum Likelihood method: Application to AGN and galactic
+                                sources observed by the CAT telescope</q><br>
+                               Supervised by P. Espigat (PCC-Collège de France, Paris)<br>
+                               <br><a href="https://theses.fr/2002CAEN2051">Link to manuscript</a> (in French)</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2002</span></div>
                     </div>
