Fix small typos
Signed-off-by: Bruno Khélifi <khelifi@in2p3.fr>

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <br>
                     <div class="subheading mb-5">
                         Gamma-ray astrophysicist at the <a href="https://apc.u-paris.fr/APC_CS/en" target="_blank">Astroparticles
-                        & Cosmology</a> laboratory (Paris, France)<br>
+                        & Cosmology</a> laboratory, APC (Paris, France)<br>
                         CNRS/IN2P3 - Université Paris Cité
                 </div>
                 <div class="lead mb-5">
@@ -140,7 +140,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">VODF</h3>
-                            <div class="subheading mb-3">Open data ormat for Very-High-Energy (VHE) gamma-ray and neutrino astronomy</div>
+                            <div class="subheading mb-3">Open data format for Very-High-Energy (VHE) gamma-ray and neutrino astronomy</div>
                             <p><a href="https://vodf.readthedocs.io/en/latest/">Very-high-energy Open Data Format</a></p>
                             <p>Respecting the <a href="https://www.go-fair.org/fair-principles/">FAIR</a> principles and
                              the <a href="https://fits.gsfc.nasa.gov/fits_standard.html">FITS</a> standards,
