--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0"><a href="https://u-paris.fr/">Université Paris Cité</a> (France)</h3>
-                            <div class="subheading mb-3">Accreditation to supervise research</div>
+                            <div class="subheading mb-3">Accreditation to supervise research - HDR</div>
                             <div><q>The TeV astrophysics towards Open Science</q></div>
                             <p>To be soon published</p>
 <!--                            <p>GPA: 3.23</p>-->
