Add the new VODF logo
Signed-off-by: Bruno Khélifi <khelifi@in2p3.fr>

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                             <h3 class="mb-0" id="vodf">VODF</h3>
                             <div class="subheading mb-3">
                                 Open data format for Very-High-Energy gamma-ray and neutrino astronomy
-                                <img src="VODF-logo.png" class="img-logo" alt="Responsive image">
+                                <img src="logo_VODF.png" class="img-logo" alt="Responsive image">
                             </div>
                             <p> Initiator and convener of the open initiative
                                 <a href="https://vodf.readthedocs.io/en/latest/">Very-high-energy Open Data Format</a> (VODF)</p>
