--- a/index.html
+++ b/index.html
@@ -215,21 +215,25 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0" id="community">Open Science Community</h3>
                             <div class="subheading mb-3">Towards an open very-high-energy astrophysics</div>
-                                <p>Member of various groups on data and software, two pillars of the Open Science:
-                                <ul class="ul">
-                                    <li>ambassador of <a href="ttps://www.softwareheritage.org/">SoftwareHeritage</a>,
-                                        the universal archive of open software,</li>
-                                    <li>member of the international organisations <a href="https://ivoa.net/">IVOA</a>
-                                        (International Virtual Open Association), <a href="https://www.rd-alliance.org/">RDA</a>
-                                        (Research Data Alliance), </li>
-                                    <li>member of the national organisations <a href="https://asov.obspm.fr">ASOV</a>
-                                        (Action Spécifique Observatoires Virtuels), IN2P3 advisory committee DOP2I
-                                        (Données Ouvertes Pour les 2 infinis),
-                                    </li>
-                                    <li>internal Open Science referent in APC and APC representative of the Open Science
-                                        group of Université Paris Cité.</li>
-                                </ul>
-                                </p>
+                            <p>Member of various groups on data and software, two pillars of the Open Science:
+                            <ul class="ul">
+                                <li>ambassador of <a href="ttps://www.softwareheritage.org/">SoftwareHeritage</a>,
+                                    the universal archive of open software,</li>
+                                <li>member of the international organisations <a href="https://ivoa.net/">IVOA</a>
+                                    (International Virtual Open Association), <a href="https://www.rd-alliance.org/">RDA</a>
+                                    (Research Data Alliance), </li>
+                                <li>member of the national organisations <a href="https://asov.obspm.fr">ASOV</a>
+                                    (Action Spécifique Observatoires Virtuels), IN2P3 advisory committee DOP2I
+                                    (Données Ouvertes Pour les 2 infinis),
+                                </li>
+                                <li>internal Open Science referent in APC and APC representative of the Open Science
+                                    group of Université Paris Cité.</li>
+                            </ul>
+                            </p>
+                            <p>
+                                <img src="Software-heritage_logo.png" class="img-center" alt="Responsive image"> &nbsp; &nbsp;
+                                <img src="logo_IVOA.jpg" class="img-center" alt="Responsive image">
+                            </p>
                         </div>
                     </div>
                 </div>
