--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">The H.E.S.S. experiment</h3>
-                            <div class="subheading mb-3">Gamma-ray observations of the Southern sky (10GeV-100TeV)</div>
+                            <div class="subheading mb-3">
+                                Gamma-ray observations of the Southern sky (10GeV-100TeV)
+                                <img src="HESS_Logo_Rot_RGB.jpg" class="img-logo" alt="Responsive image">
+                            </div>
                             <img src="HESS.jpg" class="img-fluid" alt="Responsive image">
                             <p><br>The <a href="https://www.mpi-hd.mpg.de/HESS/HESS.shtml" target="_blank">High Energy Stereoscopic System</a>
                              array is located in Namibia and is operated by an european collaboration. Operational since 2002,
@@ -108,8 +111,11 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">The CTA Observatory</h3>
-                            <div class="subheading mb-3">The first TeV gamma-ray observatory (10GeV-300TeV)</div>
-                            <img src="CTAO.jpg" class="img-fluid" alt="Responsive image" style="max-width:75%;">
+                            <div class="subheading mb-3">
+                                The first TeV gamma-ray observatory (10GeV-300TeV)
+                                <img src="CTAO-newlogo.png" class="img-logo" alt="Responsive image">
+                            </div>
+                            <img src="CTAO.jpg" class="img-fluid" alt="Responsive image" style="max-width:60%;">
                             <p><br>The <a href="https://www.cta-observatory.org/" target="_blank">Cherenkov Telescope Array</a>
                              observatory is the next generation for gamma-ray astronomy at very high energy
                               (<a href="https://arxiv.org/abs/2305.12888">arXiv:2305.12888</a>). It will
@@ -117,8 +123,8 @@
                              will host 13 telescopes to observe gamma rays from 10GeV to 10TeV. The Southern site
                              (illustrated in the above picture) is located in the Atacama desert (Chili) nearby to
                              the ESO Paranal observatory. It will consist on more than 50 telescopes, permitting
-                             to detect gamma rays on the full energy range of CTA.<br><br>
-                             I am participating to CTA since its birth's meeting in 2006 and I am actively contributing
+                             to detect gamma rays on the full energy range of CTAO.<br><br>
+                             I am participating to CTAO since its birth's meeting in 2006 and I am actively contributing
                              to its construction: optics, mechanics and instrumentation of one type of cameras, concepts
                               of calibration and science user support systems, optimisation of telescope layouts, R&D for
                               low-level data reconstruction, data modeling, requirements, science analysis tool for the
@@ -133,7 +139,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Open Science</h2>
                     <p> Data: <a href="#gadf">GADF format</a>, <a href="#vodf">VODF format</a>,
-                        <a href="#heig">IVOA</a>, 
+                        <a href="#heig">IVOA</a>,
                         <a href="#hess">H.E.S.S.</a> | Software: <a href="#gammapy">Gammapy</a>
                         | Community: <a href="#community">Open Science groups</a>
                     </p>
@@ -189,7 +195,7 @@
                             <h3 class="mb-0" id="heig">IVOA</h3>
                             <div class="subheading mb-3">
                                 High Energy Interest Group (HEIG)
-                                <img src="logo_IVOA.jpg" class="img-center" alt="Responsive image">
+                                <img src="logo_IVOA.jpg" class="img-logo" alt="Responsive image">
                             </div>
                             <p>Chair of the newly formed <a href="https://wiki.ivoa.net/twiki/bin/view/IVOA/HEGroup">HEIG</a>
                                 of the <a href="https://ivoa.net/">International Virtual Open Alliance</a>. This group
@@ -202,7 +208,10 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0" id="hess">H.E.S.S. first public data release</h3>
-                            <div class="subheading mb-3">First public data from TeV gamma-ray astronomy</div>
+                            <div class="subheading mb-3">
+                                First public data from TeV gamma-ray astronomy
+                                <img src="HESS_Logo_Rot_RGB.jpg" class="img-logo" alt="Responsive image">
+                            </div>
                             <p> Active member of the group that has created the dataset and curated the data under the
                                 GADF format (ee <a href="https://arxiv.org/abs/1810.04516">arXiv:1810.04516</a> and
                             <a href="https://zenodo.org/records/1421099">DOI 10.5281/zenodo.1421098</a>).</p>
@@ -262,7 +271,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0"><a href="https://apc.u-paris.fr/APC_CS/en">APC</a>, Paris (France)</h3>
                             <div class="subheading mb-3">Staff Researcher (CNRS)</div>
-                            <div>Gamma-ray astronomy with H.E.S.S. and CTA</div>
+                            <div>Gamma-ray astronomy with H.E.S.S. and CTAO</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Since October 2013</span></div>
                     </div>
@@ -270,7 +279,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0"><a href="https://llr.in2p3.fr/">LLR</a>, Palaiseau (France)</h3>
                             <div class="subheading mb-3">Staff Researcher (CNRS)</div>
-                            <div>Gamma-ray astronomy with H.E.S.S. and CTA</div>
+                            <div>Gamma-ray astronomy with H.E.S.S. and CTAO</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2002 - September 2013</span></div>
                     </div>
