--- a/index.html
+++ b/index.html
@@ -248,8 +248,9 @@
                                 <li>member of the <a href="https://www.rd-alliance.org/">RDA</a>
                                     (Research Data Alliance), </li>
                                 <li>member of the national organisations <a href="https://asov.obspm.fr">ASOV</a>
-                                    (Action Spécifique Observatoires Virtuels), IN2P3 advisory committee DOP2I
-                                    (Données Ouvertes Pour les 2 infinis),
+                                    (Action Spécifique Observatoires Virtuels)
+                                <\li>    
+                                <li>member of the IN2P3 advisory committee DOP2I (Données Ouvertes Pour les 2 infinis), and of the European JENA (ECTA, NuPECC, APPEC)                                       survey committee, 
                                 </li>
                                 <li>internal Open Science referent in APC and APC representative of the Open Science
                                     group of Université Paris Cité.</li>
